tests/ui/on-unimplemented/resolving/resolving_in_rustc_on_unimplemented.stderr
error[E0277]: the specialized message
  --> $DIR/resolving_in_rustc_on_unimplemented.rs:14:18
   |
LL |     let x: Foo = FromIterator::from_iter(iter);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromIterator<{integer}>` is not implemented for `Foo`
  --> $DIR/resolving_in_rustc_on_unimplemented.rs:3:1
   |
LL | pub struct Foo;
   | ^^^^^^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> $DIR/resolving_in_rustc_on_unimplemented.rs:9:1
   |
LL | pub trait FromIterator<A>: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
